--- a/frontend/sellmate/src/app/app.component.html
+++ b/frontend/sellmate/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container class="main-container">
   <mat-sidenav *ngIf="!isAuthRoute()" mode="side" opened class="sidenav">
-    <mat-toolbar color="primary">Menü</mat-toolbar>
+    <mat-toolbar color="primary">SellMate</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/feed" routerLinkActive="active-link">Anasayfa</a>
       <a mat-list-item routerLink="/explore" routerLinkActive="active-link">Arama</a>
